# lab2B-part06

./: README.md  logicanalyser.uf2
code/: CMakeLists.txt  logic_analyser.c
